# TYGlaDig

./: .gitignore  CMakeLists.txt  Camera.h  README.md  main.cpp
include/: Camera.h  Particle.h  TriangleSoup.h
include/common/: Rotator.hpp  stream_utils.hpp
include/rendering/: ShaderProgram.hpp  TextureManager.hpp
shaders/: template.frag  template.vert  vertexShader.vert
src/: Particle.cpp  TriangleSoup.cpp
src/common/: FileReader.cpp  Rotator.cpp
src/rendering/: ShaderProgram.cpp  TextureManager.cpp
